@@ -13,6 +13,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("v1/regions")
@@ -41,7 +42,7 @@ public class Region {
                 country -> {
                     return new CountryRadioDTO(country, this.useCaseRadio.getStationByCodeCountryAndNameCity(country.getCountryCode(), country.getName(), (size != null)? Integer.parseInt(size) : 20));
                 }
-        ).filter(dto -> dto.getRadios() != null && !dto.getRadios().isEmpty()).toList();
+        ).filter(dto -> dto.getRadios() != null && !dto.getRadios().isEmpty()).collect(Collectors.toList());
 
         return ResponseEntity.ok(countryRadioDTOS);
 
